[package]
name = "tauri-overlay"
version = "0.0.0"
description = "KeyStroke visualizer"
authors = ["dunkbing"]
repository = "https://github.com/dunkbing/klick"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "system-tray", "window-start-dragging" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/fufesou/rdev" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rodio = "0.18.1"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
