[package]
name = "typeview"
version = "0.0.0"
description = "TypeView - KeyStroke visualizer"
authors = ["dunkbing"]
repository = "https://github.com/dunkbing/typeview"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/fufesou/rdev" }
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
rodio = "0.18.1"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
